correciones de clases y modificado controller y vistas

--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
 ROOT_FOLDER="Proyecto-ABC"
-TITLE_SITE="⚙ Sistema Control Inventarios ABC"
+TITLE_SITE="⚙ Sistema Control Inventarios proyecto_sena"
+ALIASE_SITE="Proyecto-ABC"
 CHAR_SET="utf-8"
