Tablas Finalizada ITEMS

--- a/composer.json
+++ b/composer.json
@@ -35,7 +35,8 @@
   "require":{
     "php": ">=7.2.0",
     "almasaeed2010/adminlte": "^3.0",
-    "vlucas/phpdotenv": "^3.6"
+    "vlucas/phpdotenv": "^3.6",
+    "verot/class.upload.php" : "^2.0.9"
   },
   "require-dev": {
 
